--- a/Intermediate.ipynb
+++ b/Intermediate.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dbe3b86",
+   "id": "8028e062",
    "metadata": {},
    "source": [
     "## Tuples\n"
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "750c57a9",
+   "id": "4195da93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42530368",
+   "id": "747cfbbc",
    "metadata": {},
    "source": [
     "### Initialising a tuple"
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "92cc3c4c",
+   "id": "bd67f8c3",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fc9d143d",
+   "id": "b2189330",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "690fca30",
+   "id": "a5036ed5",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f6762eb0",
+   "id": "e8ccaf2e",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ceb9d32",
+   "id": "88d28243",
    "metadata": {},
    "source": [
     "### Accessing elements of a tuple"
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c5517eca",
+   "id": "eeb116b7",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82b6e60d",
+   "id": "a9527bf9",
    "metadata": {},
    "source": [
     "### Tuples are immutable"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5bbc0741",
+   "id": "f404b3ed",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4215c526",
+   "id": "6fc7002d",
    "metadata": {},
    "source": [
     "### Operations / Fucntions of tuples"
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "717c70bb",
+   "id": "11175054",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4adf8c37",
+   "id": "956f67a3",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "c72762e1",
+   "id": "be2b468a",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "7ce41c0e",
+   "id": "f3b9e072",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3efff7d6",
+   "id": "9d3904e5",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a122af3",
+   "id": "c59fbd82",
    "metadata": {},
    "source": [
     "### Lists v/s Tuples"
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ab3f85b6",
+   "id": "b477b1d5",
    "metadata": {},
    "outputs": [
     {
@@ -795,6 +795,331 @@
     "# Notice how list takes more time than tuples.\n",
     "\n",
     "# But we also know that lists are mutable and tuples are not. Therefore we must chose between the two depending on the use case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17da7fb0",
+   "metadata": {},
+   "source": [
+    "## Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ad5c4bd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionaries are data types in python which stores data in a 'key-value' pair. Dictionaries are ordered and mutable.\n",
+    "# Syntax for initialising a dictionary : {<key>:<value>}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "981ffe0e",
+   "metadata": {},
+   "source": [
+    "### Initialisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "a03fd04d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'firstName': 'ansh', 'lastName': 'malik', 'age': 19, 'branch': 'AIML'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1 = {\"firstName\":\"ansh\" , \"lastName\":\"malik\" , \"age\":19 , \"branch\":\"AIML\" }\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "a553be8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'ansh', 'age': 19, 'branch': 'AIML'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2 = dict(name=\"ansh\",age=19,branch=\"AIML\")\n",
+    "print(dict2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a2dbb84",
+   "metadata": {},
+   "source": [
+    "### Accessing elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "ea7207b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ansh\n",
+      "malik\n",
+      "19\n",
+      "AIML\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dict1[\"firstName\"])\n",
+    "print(dict1[\"lastName\"])\n",
+    "print(dict1[\"age\"])\n",
+    "print(dict1[\"branch\"])\n",
+    "\n",
+    "# Syntax : <variable name>[<key>]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "9e7bbe50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstName\n",
+      "lastName\n",
+      "age\n",
+      "branch\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in dict1:\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "dd85699f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ansh\n",
+      "malik\n",
+      "19\n",
+      "AIML\n"
+     ]
+    }
+   ],
+   "source": [
+    "for value in dict1.values():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "155b769b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KEY -> firstName , VALUE -> ansh\n",
+      "KEY -> lastName , VALUE -> malik\n",
+      "KEY -> age , VALUE -> 19\n",
+      "KEY -> branch , VALUE -> AIML\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key , value in dict1.items():\n",
+    "    print(f'KEY -> {key} , VALUE -> {value}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20768c23",
+   "metadata": {},
+   "source": [
+    "### Dictionaries are mutable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f62b2795",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'firstName': 'ansh', 'lastName': 'malik', 'age': 19, 'branch': 'AIML', 'email': 'anshmalik.example@gmail.com'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1[\"email\"]= \"anshmalik.example@gmail.com\"  # New key is created. If the key is already present, its value gets overwritten\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50058441",
+   "metadata": {},
+   "source": [
+    "### Operations and functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "2e61e562",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'firstName': 'ansh', 'lastName': 'malik', 'age': 19, 'branch': 'AIML'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1. del : deletes a key\n",
+    "del dict1[\"email\"]\n",
+    "print(dict1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "fa8286e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ansh\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('branch', 'AIML')"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict2 = dict(name=\"ansh\",age=19,branch=\"AIML\")\n",
+    "#2. pop: removes a pair and returns its value , takes one argument\n",
+    "val = dict2.pop(\"name\")\n",
+    "print(val)\n",
+    "\n",
+    "#3. popitem : removes last entered element\n",
+    "dict2.popitem()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "3d6e8ed3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'ansh', 'age': 19, 'branch': 'AIML', 'email': 'xyz@gmail.com'}\n",
+      "{'name': 'ansh', 'age': 19, 'branch': 'AIML', 'email': 'xyz@gmail.com'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict2 = dict(name=\"ansh\",age=19,branch=\"AIML\")\n",
+    "dict_cpy = dict2\n",
+    "\n",
+    "# This will create a reference variable not the copy and any change made to copy will also relfect in main dictionary\n",
+    "dict_cpy[\"email\"] = \"xyz@gmail.com\"\n",
+    "print(dict_cpy)\n",
+    "print(dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "acd970ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'ansh', 'age': 19, 'branch': 'AIML', 'email': 'abc@gmail.com'}\n",
+      "{'name': 'ansh', 'age': 19, 'branch': 'AIML', 'email': 'xyz@gmail.com'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To create actual copy we do:\n",
+    "dict_copy = dict2.copy()\n",
+    "dict_copy[\"email\"] = \"abc@gmail.com\"\n",
+    "print(dict_copy)\n",
+    "print(dict2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "969a8071",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'firstName': 'ansh', 'lastName': 'malik', 'age': 19, 'branch': 'AIML', 'email': 'abc@gmail.com', 'college': 'MAIT'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can also update a dictionary using another dictionary\n",
+    "d1 = {\"firstName\":\"ansh\" , \"lastName\":\"malik\" , \"age\":19 , \"branch\":\"AIML\" }\n",
+    "d2 = {\"email\":\"abc@gmail.com\" , \"college\":\"MAIT\"}\n",
+    "d1.update(d2)\n",
+    "print(d1)"
    ]
   }
  ],
