Sets notes added

--- a/Intermediate.ipynb
+++ b/Intermediate.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8028e062",
+   "id": "04143376",
    "metadata": {},
    "source": [
     "## Tuples\n"
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4195da93",
+   "id": "f397b27a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "747cfbbc",
+   "id": "25c43967",
    "metadata": {},
    "source": [
     "### Initialising a tuple"
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bd67f8c3",
+   "id": "3922b754",
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b2189330",
+   "id": "143e8001",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a5036ed5",
+   "id": "8e6cc168",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e8ccaf2e",
+   "id": "fea17710",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88d28243",
+   "id": "bc6fa026",
    "metadata": {},
    "source": [
     "### Accessing elements of a tuple"
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "eeb116b7",
+   "id": "f9816db1",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9527bf9",
+   "id": "80bed15d",
    "metadata": {},
    "source": [
     "### Tuples are immutable"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f404b3ed",
+   "id": "0991d28f",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fc7002d",
+   "id": "645770b0",
    "metadata": {},
    "source": [
     "### Operations / Fucntions of tuples"
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "11175054",
+   "id": "258bebff",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "956f67a3",
+   "id": "d9a663ff",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "be2b468a",
+   "id": "04176a2e",
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "f3b9e072",
+   "id": "bca895f9",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "9d3904e5",
+   "id": "c8a6afc9",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c59fbd82",
+   "id": "1a942717",
    "metadata": {},
    "source": [
     "### Lists v/s Tuples"
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b477b1d5",
+   "id": "04cbe448",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17da7fb0",
+   "id": "f0538ee6",
    "metadata": {},
    "source": [
     "## Dictionaries"
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ad5c4bd6",
+   "id": "93eaa691",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981ffe0e",
+   "id": "a0647849",
    "metadata": {},
    "source": [
     "### Initialisation"
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "a03fd04d",
+   "id": "be3c9321",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "a553be8a",
+   "id": "286b5ede",
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a2dbb84",
+   "id": "dfa3c0bd",
    "metadata": {},
    "source": [
     "### Accessing elements"
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ea7207b3",
+   "id": "8bec6b92",
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "9e7bbe50",
+   "id": "e8183c45",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "dd85699f",
+   "id": "f1b19746",
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "155b769b",
+   "id": "3d8a5f04",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20768c23",
+   "id": "ea62fca0",
    "metadata": {},
    "source": [
     "### Dictionaries are mutable"
@@ -974,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f62b2795",
+   "id": "986c4f62",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50058441",
+   "id": "27daba71",
    "metadata": {},
    "source": [
     "### Operations and functions"
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "2e61e562",
+   "id": "66b10131",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "fa8286e5",
+   "id": "028af768",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "3d6e8ed3",
+   "id": "81719da9",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "acd970ad",
+   "id": "11fb34e8",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "969a8071",
+   "id": "7f773edb",
    "metadata": {},
    "outputs": [
     {
@@ -1120,6 +1120,243 @@
     "d2 = {\"email\":\"abc@gmail.com\" , \"college\":\"MAIT\"}\n",
     "d1.update(d2)\n",
     "print(d1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "995c092f",
+   "metadata": {},
+   "source": [
+    "## Sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "af2b9f97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In python, sets are unordered and mutabledata types and they do not allow any duplicates.\n",
+    "# Python sets are initialised using '{}' brackets, same as dicitonary but we do not put any key value pairs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "85454aa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {1,2,3,4}\n",
+    "print(set1)\n",
+    "\n",
+    "set2 = {1,2,3,2,1}   #duplicate values will not be printed\n",
+    "print(set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fd2e0ffa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 10, 21, 54, 23}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can add elements to the set by using 'add' function\n",
+    "set1.add(10)\n",
+    "set1.add(10)\n",
+    "set1.add(21)\n",
+    "set1.add(54)\n",
+    "set1.add(23)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "919ed1d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 4, 10, 21, 54, 23}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "101",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(set1)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Note: If we pass a value that is not present in the set, it will throw an error\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m set1\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m101\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 101"
+     ]
+    }
+   ],
+   "source": [
+    "# We can delete elements in a set using 2 different methods:\n",
+    "\n",
+    "# 1. 'remove' function\n",
+    "set1.remove(3)\n",
+    "print(set1)\n",
+    "\n",
+    "# Note: If we pass a value that is not present in the set, it will throw an error\n",
+    "set1.remove(101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c719463e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3}\n",
+      "{1, 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2.  'discard' method:\n",
+    "set2.discard(2)\n",
+    "print(set2)\n",
+    "\n",
+    "# Note: If we pass an element that is not in the set, it will not throw an error and will not change set.\n",
+    "set2.discard(-1)\n",
+    "print(set2)  # No error "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "311e7d80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can empty our set by using 'clear' method\n",
+    "set2.clear()\n",
+    "print(set2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "03eaf974",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 'pop' function : It returns and arbitrary value(because set is unordered) and deletes it from the set.\n",
+    "set1.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "40f70bc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 10, 21, 54, 23}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set1)   # '1' is deleted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "55bb4dd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11} \n",
+      "\n",
+      "{1, 3, 5, 7, 11} \n",
+      "\n",
+      "{9} \n",
+      "\n",
+      "{0, 1, 3, 4, 5, 6, 7, 8, 10, 11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "odd={1,3,5,7,9,11}\n",
+    "even = {0,2,4,6,8,10}\n",
+    "prime={1,2,3,5,7,11}\n",
+    "\n",
+    "set_union = odd.union(even) #prints all the elements in both the sets with duplicated values removed.\n",
+    "print(set_union,'\\n')  \n",
+    "\n",
+    "set_intersection = odd.intersection(prime)  #prints the elements which are common to both the sets.\n",
+    "print(set_intersection,'\\n')\n",
+    "\n",
+    "set_difference = odd.difference(prime)  #prints elements of first set which are not in second set.\n",
+    "print(set_difference,'\\n')\n",
+    "\n",
+    "set_sDifference = even.symmetric_difference(prime)   #Prints all the elements except the ones which are common in both\n",
+    "print(set_sDifference)\n",
+    "\n",
+    "'''\n",
+    "other methods:\n",
+    "1.update\n",
+    "2.intetsection_update\n",
+    "3.difference_update\n",
+    "4.issubset\n",
+    "5.issuperset\n",
+    "6.isdisjoint\n",
+    "'''"
    ]
   }
  ],
