added collections,itertools and lambda functions

--- a/Intermediate.ipynb
+++ b/Intermediate.ipynb
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "919ed1d4",
+   "id": "546ed33c",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c719463e",
+   "id": "760fa755",
    "metadata": {
     "scrolled": true
    },
@@ -1254,7 +1254,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "311e7d80",
+   "id": "bf195d72",
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "03eaf974",
+   "id": "5f8210ef",
    "metadata": {},
    "outputs": [
     {
@@ -1296,7 +1296,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "40f70bc2",
+   "id": "5ae12225",
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "55bb4dd6",
+   "id": "00541791",
    "metadata": {},
    "outputs": [
     {
@@ -1357,6 +1357,442 @@
     "5.issuperset\n",
     "6.isdisjoint\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ec04514",
+   "metadata": {},
+   "source": [
+    "## Collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "283463d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Collections : counter , namedtuple , orderedDict , deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4e4a55fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'b': 4, 'c': 4, 'a': 2})\n",
+      "[('b', 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "a = \"aabbbbcccc\"\n",
+    "my_counter = Counter(a)\n",
+    "print(my_counter)\n",
+    "\n",
+    "print(my_counter.most_common(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "74835254",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(x=1, y=-4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import namedtuple as nt\n",
+    "point = nt('Point',  'x,y')\n",
+    "pt=point(1,-4)\n",
+    "print(pt)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9e4e70f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OrderedDict([('a', 1), ('b', 2), ('c', 3), ('d', 4), ('e', 5)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OrderedDict : It is ordered dictionary\n",
+    "from collections import OrderedDict \n",
+    "od = OrderedDict()\n",
+    "od['a']=1\n",
+    "od['b']=2\n",
+    "od['c']=3\n",
+    "od['d']=4\n",
+    "od['e']=5\n",
+    "print(od)\n",
+    " \n",
+    "# It not readily used now because in new python update, dictionaries can also store order"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "59cb8285",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# DefaultDict : A default value will be there if we try to access a key which is not defined\n",
+    "from collections import defaultdict \n",
+    "dd = defaultdict(int)\n",
+    "dd['a']=23\n",
+    "print(dd['a']) # O/P -> 23\n",
+    "print(dd['abc']) # O/P -> 0 , because abc key is not defined and we have passed int as parameter which will be the default value\n",
+    "\n",
+    "#Note : we must pass a data type only as a parameter for default value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f2457a97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 2])\n",
+      "deque([4, 1, 2])\n",
+      "deque([4, 1])\n",
+      "deque([1])\n",
+      "deque([1, 2, 3, 4])\n",
+      "deque([1, 2, 3, 4, 5, 6])\n",
+      "deque([8, 7, 1, 2, 3, 4, 5, 6])\n",
+      "deque([6, 8, 7, 1, 2, 3, 4, 5])\n",
+      "deque([8, 7, 1, 2, 3, 4, 5, 6])\n",
+      "deque([])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Deque: It is a double ended queue which can be implemented in python easily\n",
+    "from collections import deque\n",
+    "d=deque()\n",
+    "\n",
+    "d.append(1)\n",
+    "d.append(2)\n",
+    "print(d)\n",
+    "\n",
+    "d.appendleft(4)\n",
+    "print(d)\n",
+    "\n",
+    "d.pop()\n",
+    "print(d)\n",
+    "\n",
+    "d.popleft()\n",
+    "print(d)\n",
+    "\n",
+    "d.append(2)\n",
+    "d.append(3)\n",
+    "d.append(4)\n",
+    "print(d)\n",
+    "\n",
+    "d.extend([5,6])\n",
+    "print(d)\n",
+    "\n",
+    "d.extendleft([7,8])\n",
+    "print(d)\n",
+    "\n",
+    "d.rotate(1)\n",
+    "print(d)\n",
+    "\n",
+    "d.rotate(-1)  # Rotates to the left\n",
+    "print(d)\n",
+    "\n",
+    "d.clear()\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ced920a1",
+   "metadata": {},
+   "source": [
+    "## Itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0e6af573",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Itertools contains : product , permutation , combinations , accumulate , groupby , infinite iterators\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ce9bedf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 3), (1, 4), (1, 5), (2, 3), (2, 4), (2, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Product:\n",
+    "from itertools import product\n",
+    "a = [1,2]\n",
+    "b = [3,4,5]\n",
+    "pd = product(a,b) # can also take an additional parameter 'repeat'\n",
+    "print(list(pd))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0e363cfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 4, 5), (3, 5, 4), (4, 3, 5), (4, 5, 3), (5, 3, 4), (5, 4, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# permutations:\n",
+    "from itertools import permutations\n",
+    "pm = permutations(b) # can also take 'int' as an additional parameter which specifies length of the permutations \n",
+    "print(list(pm))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "e52309e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 4), (3, 5), (4, 5)]\n",
+      "[(3, 3), (3, 4), (3, 5), (4, 4), (4, 5), (5, 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# combinations:\n",
+    "from itertools import combinations \n",
+    "cmb = combinations(b,2)  # the second parameter is the length which is mandatory for combination function\n",
+    "print(list(cmb))\n",
+    "\n",
+    "from itertools import combinations_with_replacement as cwr\n",
+    "cmb2 = cwr(b,2)\n",
+    "print(list(cmb2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "a06e85f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "[1, 3, 6, 10]\n",
+      "[1, 2, 6, 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# accumulate:\n",
+    "from itertools import accumulate\n",
+    "a=[1,2,3,4]\n",
+    "print(a)\n",
+    "acc = accumulate(a)\n",
+    "print(list(acc))\n",
+    "\n",
+    "import operator\n",
+    "acc = accumulate(a , func=operator.mul)  # will multiply the numbers\n",
+    "print(list(acc))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "2c642d94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False [3, 2]\n",
+      "True [6, 8]\n",
+      "False [1]\n",
+      "True [10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# groupby:\n",
+    "from itertools import groupby\n",
+    "\n",
+    "def greater_than_5(x):\n",
+    "    return x>5\n",
+    "\n",
+    "a=[3,2,6,8,1,10]\n",
+    "group_obj = groupby(a , key=greater_than_5)\n",
+    "\n",
+    "for key , value in group_obj:\n",
+    "    print(key , list(value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "695c84a7",
+   "metadata": {},
+   "source": [
+    "## Lambda functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "24706e87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lambda functions are one liner functions which makes the implementation of shorter functioins easier\n",
+    "# Syntax -> lambda <arguments> : expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "c481fdcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "add10 = lambda x: x+10\n",
+    "print(add10(21))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "11c9b62f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiply = lambda x,y: x*y\n",
+    "print(multiply(3,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "b18f4352",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(-10, 5), (-1, 4), (1, 2), (2, 5), (5, -4), (8, 2)]\n",
+      "[(5, -4), (1, 2), (8, 2), (-1, 4), (-10, 5), (2, 5)]\n",
+      "[(-10, 5), (5, -4), (1, 2), (-1, 4), (2, 5), (8, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use cases :\n",
+    "points2D = [(1,2),(-1,4),(5,-4),(8,2),(-10,5),(2,5)]\n",
+    "sorted1 = sorted(points2D)\n",
+    "print(sorted1)  # sorting is done on basis of x values, but we want to sort on basis of y value,therefore we will do : \n",
+    "\n",
+    "sorted2 = sorted(points2D , key=lambda x:x[1])\n",
+    "print(sorted2)\n",
+    "\n",
+    "# sorting on basis of sum of pairs:\n",
+    "sorted3 = sorted(points2D , key=lambda x: x[0]+x[1])\n",
+    "print(sorted3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "45d534da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5,6]\n",
+    "b=list(map(lambda x: x*x,a))\n",
+    "print(b)\n",
+    "\n",
+    "# similarily, we can use lambda for 'reduce' or 'filter' functions"
    ]
   }
  ],
